--- a/style/share.css
+++ b/style/share.css
@@ -441,31 +441,45 @@ button.danger:hover {
 }
 
 .file-group.expanded {
+    margin-bottom: 0px;
+    transition: margin-bottom 0.3s ease;
+}
+
+.file-group.expanded {
     margin-bottom: 32px;
 }
 
 .file-group-header {
     width: 100%;
     display: flex;
+    justify-content: space-between;
     align-items: center;
     gap: 6px;
-    padding: 6px 8px;
+    padding: 6px 5px 6px 8px;
     background: var(--background-color-2);
     border: none;
     cursor: pointer;
     font-size: normal;
     color: var(--title-color);
     border-radius: 12px;
-    margin-bottom: 4px;
     text-transform: capitalize;
+    box-sizing: border-box;
 }
 
-.file-group.expanded .file-group-header {
+/* .file-group.expanded .file-group-header {
     background-color: var(--background-color-3);
-}
+} */
 
 .file-group-header:hover {
     background-color: var(--hover-color);
+}
+
+.file-group-header .icon-button {
+    opacity: 0;
+}
+.file-group.expanded .file-group-header .icon-button,
+.file-group-header:hover .icon-button {
+    opacity: 1;
 }
 
 .file-group-content.collapsed {
@@ -474,13 +488,22 @@ button.danger:hover {
 
 .file-group-content {
     border-left: 1px solid var(--border-light-color);
-    margin-left: 12px;
-    padding-left: 6px;
+    border-left-color: var(--border-light-color);
+    margin-left: 17px;
+    padding-left: 5px;
 }
 
 .file-group-header .icon {
-    font-size: 18px;
+    font-size: 20px;
 }
+
+.file-group-content.color-red,    .file-group-icon.color-red    { color: var(--quote-red)    !important; border-left-color: var(--quote-red)    !important; }
+.file-group-content.color-orange, .file-group-icon.color-orange { color: var(--quote-orange) !important; border-left-color: var(--quote-orange) !important; }
+.file-group-content.color-yellow, .file-group-icon.color-yellow { color: var(--quote-yellow) !important; border-left-color: var(--quote-yellow) !important; }
+.file-group-content.color-green,  .file-group-icon.color-green  { color: var(--quote-green)  !important; border-left-color: var(--quote-green)  !important; }
+.file-group-content.color-blue,   .file-group-icon.color-blue   { color: var(--quote-blue)   !important; border-left-color: var(--quote-blue)   !important; }
+.file-group-content.color-purple, .file-group-icon.color-purple { color: var(--quote-purple) !important; border-left-color: var(--quote-purple) !important; }
+.file-group-content.color-pink,   .file-group-icon.color-pink   { color: var(--quote-pink)   !important; border-left-color: var(--quote-pink)   !important; }
 
 .sidebar .file {
     background-color: var(--background-color-2);
