--- a/style/preview.css
+++ b/style/preview.css
@@ -924,7 +924,7 @@
 }
 
 .preview .icon-container .banner-emoji,
-.preview .icon-container icon {
+.preview .icon-container .icon {
     font-size: 2.5rem;
     line-height: 1.35;
     display: block;
@@ -934,6 +934,15 @@
     user-select: none;
     pointer-events: none;
 }
+
+.preview .icon-container .icon.color-pink   { color: var(--quote-pink)   !important; }
+.preview .icon-container .icon.color-purple { color: var(--quote-purple) !important; }
+.preview .icon-container .icon.color-blue   { color: var(--quote-blue)   !important; }
+.preview .icon-container .icon.color-green  { color: var(--quote-green)  !important; }
+.preview .icon-container .icon.color-yellow { color: var(--quote-yellow) !important; }
+.preview .icon-container .icon.color-orange { color: var(--quote-orange) !important; }
+.preview .icon-container .icon.color-red    { color: var(--quote-red)    !important; }
+
 .preview .text-container {
     flex: 1 1 auto;
     min-width: 0;
