--- a/style/prompts.css
+++ b/style/prompts.css
@@ -123,7 +123,9 @@
     animation: showdialogBig 0.5s ease-in-out forwards;
 }
 
-.prompt-dialog.no-animation,
+.prompt-dialog.no-animation {
+    animation: none !important;
+}
 .prompt-big-dialog.no-animation {
     border: 0;
     box-shadow: none;
@@ -342,32 +344,82 @@
     color: var(--text-color);
 }
 
+.prompt-search-input {
+    background-color: var(--background-color) !important;
+    border-radius: 0px !important;
+    padding: 8px 48px 8px 15px !important;
+    margin: 0px !important;
+    border: none !important;
+    border-bottom: 1px solid var(--border-light-color) !important;
+    width: calc(100% - 48px - 8px)  !important;
+    color: var(--title-color) !important;
+}
+
 .prompt-preview-list {
     list-style: none;
     padding: 0;
     margin: 0;
     overflow-y: auto;
     background: var(--background-color);
-    border-radius: 4px;
     font-size: 14px;
+
+    text-rendering: geometricPrecision;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .prompt-preview-list li {
-    padding: 6px 10px;
+    background: var(--background-color);
+    padding: 10px;
     cursor: pointer;
-    border-radius: 500px;
     display: flex;
     align-items: center;
-    gap: 5px;
+    gap: 10px;
+    transition: background-color 0s;
+    margin: 5px;
+    border-radius: 10px;
+}
+.prompt-preview-list li:hover {
+    background-color: var(--hover-color);
 }
 
 .prompt-preview-list li .icon {
-    font-size: large;
+    font-size: 24px;
 }
 
+.prompt-preview-list li .prompt-item-description {
+    margin-top: 2px;
+    font-size: 0.85rem;
+}
+
+.prompt-preview-list li .prompt-item-description .icon {
+    font-size: 16px;
+    vertical-align: middle;
+}
+
+.prompt-preview-list li .prompt-item-description .tag {
+    padding: 2px 8px;
+    border-radius: 8px;
+    font-size: 0.85rem;
+}
+
+.prompt-preview-list li .prompt-item-description .tag:nth-of-type(5n+1) { background-color: var(--quote-blue-bg); color: var(--quote-blue) }
+.prompt-preview-list li .prompt-item-description .tag:nth-of-type(5n+2) { background-color: var(--quote-green-bg); color: var(--quote-green) }
+.prompt-preview-list li .prompt-item-description .tag:nth-of-type(5n+3) { background-color: var(--quote-yellow-bg); color: var(--quote-yellow) }
+.prompt-preview-list li .prompt-item-description .tag:nth-of-type(5n+4) { background-color: var(--quote-red-bg); color: var(--quote-red) }
+.prompt-preview-list li .prompt-item-description .tag:nth-of-type(5n)   { background-color: var(--quote-purple-bg); color: var(--quote-purple) }
+
+.prompt-preview-list li .icon.color-red    { color: var(--quote-red)    !important; }
+.prompt-preview-list li .icon.color-orange { color: var(--quote-orange) !important; }
+.prompt-preview-list li .icon.color-yellow { color: var(--quote-yellow) !important; }
+.prompt-preview-list li .icon.color-green  { color: var(--quote-green)  !important; }
+.prompt-preview-list li .icon.color-blue   { color: var(--quote-blue)   !important; }
+.prompt-preview-list li .icon.color-purple { color: var(--quote-purple) !important; }
+.prompt-preview-list li .icon.color-pink   { color: var(--quote-pink)   !important; }
+
 .prompt-preview-list li.selected-option {
-    background-color: var(--hover-color);
-    color: var(--text-color);
+    background: var(--hover-color);
+    color: var(--title-color);
 }
 
 .prompt-dialog .switch {
@@ -607,6 +659,16 @@ h5.setting-subtitle {
 }
 
 .color-preview-dialog .dialog-window-control:hover {
+    background-color: var(--field-color);
+    text-shadow: none;
+}
+
+.dialog-window-control.transparent-dialog-window-control {
+    background-color: #00000000;
+    text-shadow: var(--shadow-light);
+}
+
+.dialog-window-control.transparent-dialog-window-control:hover {
     background-color: var(--field-color);
     text-shadow: none;
 }
