added link following and similar symbol highlight extensions

--- a/script/codemirror/lib/codemirror.css
+++ b/script/codemirror/lib/codemirror.css
@@ -236,6 +236,11 @@
     color: var(--hljs-link) !important;
 }
 
+.cm-link-hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
 .CodeMirror-composing {
     border-bottom: 2px solid var(--text-color);
 }
@@ -619,31 +624,7 @@ span.CodeMirror-selectedtext {
 }
 
 .cm-hr {
-    display: block;
-    width: 100%;
-    margin: 0;
-    position: relative;
-}
-
-.cm-hr::before {
-    content: "";
-    position: absolute;
-    left: 4ch;
-    right: 4ch;
-    top: 50%;
-    transform: translateY(-50%);
-    height: 1px;
-    background: var(--border-light-color);
-    z-index: -1;
-    animation: hr-before-show 0.3s;
-}
-
-@keyframes hr-before-show {
-    from {
-        right: 100%;
-    } to {
-        right: 4ch;
-    }
+    font-weight: bold;
 }
 
 .cm-string.cm-url,
@@ -754,6 +735,10 @@ span.CodeMirror-selectedtext {
         left: 0;
         margin-right: 1ch;
     }
+}
+
+.cm-selection-similar {
+    text-decoration: underline;
 }
 
 .cm-metadata-field-title::before { content: "label"; }
