--- a/style/palette.css
+++ b/style/palette.css
@@ -67,7 +67,7 @@
 }
 
 .theme-light {
-    --active-line:          #e5e5e5;
+    --active-line:          #eeeeee;
 
     --background-color:     #f5f5f5;
     --background-color-2:   #ffffff;
@@ -253,7 +253,7 @@
 }
 
 .theme-epaper {
-    --active-line:          #bbbbbb;
+    --active-line:          #eeeeee;
 
     --background-color:     #ffffff;
     --background-color-2:   #ffffff;
