pt-br translation: added main application

--- a/script/codemirror/lib/codemirror.css
+++ b/script/codemirror/lib/codemirror.css
@@ -738,7 +738,7 @@ span.CodeMirror-selectedtext {
 }
 
 .cm-selection-similar {
-    text-decoration: underline;
+    text-decoration: underline dotted;
 }
 
 .cm-metadata-field-title::before { content: "label"; }
