added keyboard shortcuts dialog

--- a/style/preview.css
+++ b/style/preview.css
@@ -30,42 +30,25 @@
 .preview h1, .preview h2, .preview h3, .preview h4, .preview h5, .preview h6 {
     width: 100%;
     font-family: var(--font-title);
-    color: var(--title-color);
-    padding-top: 15px;
     word-break: break-all;
+    margin: 0 0 12px;
+    color: var(--title-color);
+    font-weight: 500;
 }
 
-.preview h1 {
-    font-size: 2.5rem;
-    margin: 1.5rem 0;
-    border-bottom: 1px solid var(--border-light-color);
-}
-
+.preview h1,
 .preview h2 {
-    font-size: 2rem;
-    margin: 1.4rem 0;
     border-bottom: 1px solid var(--border-light-color);
 }
 
-.preview h3 {
-    font-size: 1.5rem;
-    margin: 1.3rem 0;
-}
-
-.preview h4 {
-    font-size: 1.2rem;
-    margin: 1.2rem 0;
-}
-
-.preview h5 {
-    font-size: 1rem;
-    margin: 1.1rem 0;
+.preview h5,
+.preview h6 {
+    font-size: 1em;
+    opacity: 75%;
 }
 
 .preview h6 {
-    font-size: 1rem;
-    margin: 1rem 0;
-    opacity: 75%;
+    opacity: 50%;
 }
 
 .preview p {
