--- a/style/landing.css
+++ b/style/landing.css
@@ -81,7 +81,6 @@ section.filler {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    backdrop-filter: blur(3px);
 }
 
 .infinite-scroll {
@@ -151,13 +150,13 @@ button.primary {
     min-width: 200px;
     cursor: pointer;
     transition: all 0.5s;
-    box-shadow: 0px 0px 100px 50px transparent;
+    box-shadow: 0px 0px 0px 0px var(--highlight-color) inset;
 }
 
 button.primary:hover {
     color: var(--button-color-2);
-    background-color: var(--highlight-color);
-    box-shadow: 0px 0px 0px 0px var(--highlight-color);
+    /* background-color: var(--highlight-color); */
+    box-shadow: 200px 0px 0px 0px var(--highlight-color) inset;
 }
 
 button.secondary {
@@ -202,27 +201,124 @@ button.secondary:hover {
     }
 }
 
+.features-grid {
+    display: grid;
+    
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 180px 180px 180px;
+    
+    grid-template-areas:
+        "a a a b"
+        "f c c b"
+        "f c c b"
+        "d d e h"
+        "d d i j"
+        "g g g g";
+    
+    gap: 1rem;
+    
+    flex: 2 0 320px;
+}
+
 .feature-container {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    border-radius: 15px;
-}
-
-.feature-container img {
-    border-radius: 15px;
-    max-width: 500px;
+    height: 100%;
     width: 100%;
-    height: auto;
+
+    background-color: var(--background-color-2);
+    box-shadow: var(--shadow-light);
+    border-radius: 1rem;
+    
+    padding: 1rem;
+    gap: 1rem;
+    
+    box-sizing: border-box;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+    border: 1px solid var(--border-light-color);
 }
 
-.feature-container.left {
+.feature-container.row {
     flex-direction: row;
 }
 
-.feature-container.right {
-    flex-direction: row-reverse;
-    text-align: end;
+.feature-a { grid-area: a; }
+.feature-b { grid-area: b; }
+.feature-c { grid-area: c; }
+.feature-d { grid-area: d; }
+.feature-e { grid-area: e; }
+.feature-f { grid-area: f; }
+.feature-g { grid-area: g; }
+.feature-h { grid-area: h; }
+.feature-i { grid-area: i; }
+.feature-j { grid-area: j; }
+
+.feature-container img {
+    border-radius: 12px;
+    max-width: 300px;
+}
+
+.feature-container .icon {
+    font-size: 64px;
+}
+
+.feature-d {
+    padding: 0;
+    overflow: hidden;
+    align-items: start;
+    img {
+        border-radius: 0;
+        max-width: 100%;
+        width: 100%;
+    }
+}
+
+.feature-f {
+    position: relative;
+    overflow: hidden;
+    justify-content: space-between;
+    align-items: start;
+    svg {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: 0;
+    }
+    h1 {
+        z-index: 1;
+    }
+    button {
+        z-index: 1;
+        backdrop-filter: blur(5px) brightness(1.1);
+        background-color: transparent;
+    }
+}
+
+@media (max-width: 700px) {
+
+    .features-grid {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        
+        grid-template-areas:
+            "a"
+            "b"
+            "c"
+            "d"
+            "e"
+            "f"
+            "g";
+    }
+
+    .feature-container.row {
+        flex-direction: column;
+        text-align: center;
+    }
+
 }
 
 .thing-container {
@@ -275,7 +371,7 @@ button.secondary:hover {
         display: none;
     }
 
-    .feature-container,
+    /* .feature-container,
     .feature-container.left,
     .feature-container.right {
         flex-direction: column;
@@ -295,7 +391,7 @@ button.secondary:hover {
 
     .feature-container .feature-container-text {
         margin: 5px;
-    }
+    } */
 
     .header-text {
         display: none;
